# QtWidgetsTest

./: .gitignore  CMakeLists.txt  README.md
emptyExecutable/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
executable/: CMakeLists.txt  benchmark.cpp  benchmark.h  listDelegate.cpp  listDelegate.h  listModel.cpp  listModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
